# waste-calendar

./: .gitignore  Pipfile  README.md  main.py  pyproject.toml  waste.ics
