[tool.poetry]
name = "waste-calendar"
version = "0.1.0"
description = ""
authors = ["Kazushi Konosu <kazushi@konosu.me>"]

[tool.poetry.dependencies]
python = "^3.8"
beautifulsoup4 = "^4.8.2"
ics = "^0.7"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
